@@ -160,6 +160,7 @@ run = if [[ -d ~/git/adopteddists ]]; then perl -p -i -e'BEGIN { undef $/ }; s/(
 -remove = Test::Version
 -remove = PodCoverageTests
 -remove = Test::Pod::No404s
+-remove = Test::CPAN::Changes
 ; TODO: this should be done automatically with a plugin that uses
 ; [Git::NextVersion] and [%Git] to inject a prereq, as well as a runtime
 ; version check
